--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -556,6 +556,28 @@
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"सेटअप गर्न ट्याप गर्नुहोस्"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"निजी स्पेसका लागि फिंगरप्रिन्ट अनलक सुविधा"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"निजी स्पेसका लागि फेस अनलक सुविधा"</string>
+    <!-- no translation found for private_space_biometric_unlock_title (1978145237698659673) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_title (5187730641333680942) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_message (9092068873421435300) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_footer_message (7125255484447984854) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_finish_message (4754797926493316965) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_title (3717541082520006032) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_message (250239418499081821) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_looking (5694757845303924042) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_less_secure (8460719783943533172) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_require_attention_details (2799569069549999689) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_footer (7722256209563543711) -->
+    <skip />
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"अनलक गर्ने तरिकाहरू"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"डिभाइसको स्क्रिन लक जसरी नै"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"निजी स्पेसमा नयाँ लक चयन गर्ने हो?"</string>
@@ -1470,6 +1492,8 @@
     <string name="error_duplicate_apn_entry" msgid="7792928408935276618">"APN को नाम दोहोरिएको छ।"</string>
     <string name="error_name_empty" msgid="1258275899283079142">"नाम फिल्ड खाली हुन सक्तैन।"</string>
     <string name="error_apn_empty" msgid="7657491065443746915">"APN खाली हुन सक्तैन।"</string>
+    <!-- no translation found for error_apn_type_empty (8697781608034468813) -->
+    <skip />
     <string name="error_mcc_not3" msgid="883659545640179094">"MCC क्षेत्र कम से कम ३ अङ्कको हुनु पर्छ।"</string>
     <string name="error_mnc_not23" msgid="7642478711158474918">"MNC क्षेत्रमा २ वा ३ अंकहरू हुनुपर्दछ"</string>
     <string name="error_adding_apn_type" msgid="1324263534991467943">"सेवा प्रदायकले %s प्रकारका APN हरू थप्ने अनुमति दिँदैन।"</string>
@@ -3324,7 +3348,42 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"साउन्डसहित आउने कुरालाई अनुमति दिनुहोस्"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"दृश्य सम्बन्धी बाधालाई रोक्नु"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"सङ्केतहरूलाई देखिन दिनुहोस्"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"लुकाइएका सूचना देखाउने विकल्पहरू"</string>
+    <!-- no translation found for mode_interruption_filter_title (6657431939996264417) -->
+    <skip />
+    <!-- no translation found for mode_device_effects_title (5857008332618433744) -->
+    <skip />
+    <!-- no translation found for mode_display_settings_title (8132825978346535472) -->
+    <skip />
+    <!-- no translation found for mode_display_options_section (5151597748243866532) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_title (6027553257331235461) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_title_secondary_list (2662593380253642581) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_summary (6682099523626777038) -->
+    <skip />
+    <!-- no translation found for mode_aod_title (5903435070341237325) -->
+    <skip />
+    <!-- no translation found for mode_aod_title_secondary_list (8268180392811027557) -->
+    <skip />
+    <!-- no translation found for mode_aod_summary (7516159044827627065) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_title (5549693923133928374) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_title_secondary_list (5034602021811580157) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_summary (665480011615603784) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_title (8099007897943513209) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_title_secondary_list (4761262694149772845) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_summary (8428887193785431898) -->
+    <skip />
+    <!-- no translation found for mode_display_settings_summary (5929234706883482380) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_title (4926944083757096458) -->
+    <skip />
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"बाधा नपुऱ्याउनुहोस् मोड अन हुँदा"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"सूचना आउँदा साउन्ड नआओस्"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"तपाईं आफ्नो स्क्रिनमा सूचनाहरू देख्नु हुने छ"</string>
@@ -3335,9 +3394,12 @@
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"कस्टम"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">" कस्टम सेटिङ सक्षम पार्नुहोस्‌"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">" कस्टम सेटिङ हटाउनुहोस्‌"</string>
-    <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"सूचना आउँदा साउन्ड नआओस्"</string>
-    <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"आंशिक रूपमा लुकेको"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">" सूचना आउँदा भिजुअल वा साउन्ड नआओस्"</string>
+    <!-- no translation found for zen_mode_restrict_notifications_summary_muted (2826459087306271381) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_summary_custom (6455811408721183198) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_summary_hidden (2157279412167366119) -->
+    <skip />
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"आफूले सेट गरेका बन्देज"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"स्क्रिन अन हुँदा"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"स्क्रिन अफ भएका बेलामा"</string>
@@ -4505,7 +4567,8 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"यसमा <xliff:g id="LABEL">%s</xliff:g> प्ले गर्नुहोस्"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"अडियो यसमा प्ले हुने छ"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"यो डिभाइस"</string>
-    <string name="media_output_audio_sharing" msgid="6531742594884809737">"अडियो सेयरिङ"</string>
+    <!-- no translation found for media_output_audio_sharing (8169294522817470115) -->
+    <skip />
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"कलहरूको बेला अनुपलब्ध"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"यसमार्फत फोन उठाउनुहोस्"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"यो APN परिवर्तन गर्न सकिँदैन।"</string>
@@ -4701,6 +4764,10 @@
     <string name="sim_onboarding_next" msgid="6415025179929475355">"अर्को"</string>
     <string name="sim_onboarding_progressbar_turning_sim_on" msgid="1163318788393361574">"<xliff:g id="CARRIER_NAME">%1$s</xliff:g> अन गरिँदै छ…"</string>
     <string name="mobile_network_spn_title" msgid="3053793174495329077">"मोबाइल नेटवर्क"</string>
+    <!-- no translation found for imei_primary (5312232202518974440) -->
+    <skip />
+    <!-- no translation found for meid_primary (3256732684155678106) -->
+    <skip />
     <string name="mobile_network_phone_number_title" msgid="2090794402855021784">"फोन नम्बर"</string>
     <string name="mobile_network_sim_label_color_title" msgid="2401352348041132876">"SIM को लेबल तथा रङ"</string>
     <string name="sim_setup_channel_id" msgid="8797972565087458515">"नेटवर्क सक्रिय गर्ने प्रक्रिया"</string>
@@ -4804,14 +4871,18 @@
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
     <string name="enable_16k_pages" msgid="8001470927566110689">"१६ के.बि. आकारको पेज चल्ने गरी बुट गर्नुहोस्"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"१६ के.बि. आकारको पेज चल्ने कर्नेल प्रयोग गरी डिभाइस बुट गर्नुहोस्"</string>
-    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"४ के.बि. मोड बदलेर १६ के.बि. मोड प्रयोग गर्नुहोस्"</string>
-    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"तपाईं हाल ४ के.बि. कर्नेल चलिरहेको पेज एग्नोस्टिक मोड प्रयोग गर्दै हुनुहुन्छ र १६ के.बि. मोड प्रयोग गर्न लाग्दै हुनुहुन्छ। यो मोडमा सफ्टवेयरको पूर्णताका बारेमा ग्यारेन्टी गर्न सकिँदैन र बुटलोडर अनलक गरिएका बेला फोनमा भण्डारण गरिएको सबै डेटा जोखिममा पर्न सक्छ। यसो गरेपछि डिभाइस रिबुट हुने छ। यी मोडमा केही सुविधाहरू अफ हुने हुनाले केही एपहरू नचल्न सक्छन्। डिभाइसलाई प्रोडक्सन मोडमा फर्काउन तपाईंले ४ के.बि. मोडमा फर्किएर बुटलोडर लक गर्नु पर्ने हुन्छ। यसो गर्दा डिभाइस फ्याक्ट्री रिसेट हुन्छ। डिभाइस Android मा बुट भएपछि विकासकर्ता मोडमा गई OEM अनलक सेटिङ अफ गर्नुहोस्।"</string>
+    <!-- no translation found for confirm_enable_16k_pages_title (611010487387251491) -->
+    <skip />
+    <!-- no translation found for confirm_enable_16k_pages_text (6129208614283750541) -->
+    <skip />
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"१६ के.बि. मोड बदलेर ४ के.बि. मोड प्रयोग गर्नुहोस्"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"तपाईं हाल १६ के.बि. कर्नेल चलिरहेको पेज एग्नोस्टिक मोड प्रयोग गर्दै हुनुहुन्छ र ४ के.बि. मोड प्रयोग गर्न लाग्दै हुनुहुन्छ। यो मोडमा सफ्टवेयरको पूर्णताका बारेमा ग्यारेन्टी गर्न सकिँदैन र बुटलोडर अनलक गरिएका बेला फोनमा भण्डारण गरिएको सबै डेटा जोखिममा पर्न सक्छ। यसो गरेपछि डिभाइस रिबुट हुने छ। यी मोडमा केही सुविधाहरू अफ हुने हुनाले केही एपहरू नचल्न सक्छन्। डिभाइसलाई प्रोडक्सन मोडमा फर्काउन तपाईंले बुटलोडर लक गर्नु पर्ने हुन्छ। यसो गर्दा डिभाइस फ्याक्ट्री रिसेट हुन्छ। डिभाइस Android मा बुट भएपछि विकासकर्ता मोडमा गई OEM अनलक सेटिङ अफ गर्नुहोस्।"</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"कर्नेल अपडेट गरी १६ के.बि. का पेजसँग कम्प्याटिबल कर्नेल बनाउन सकिएन।"</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"परिवर्तन लागू गरिँदै छ"</string>
     <string name="confirm_format_ext4_title" msgid="6696191800594435577">"डिभाइस रिफर्म्याट गरी ext4 बनाउने हो? (१६ के.बि. मोड प्रयोग गर्न यसो गर्नु पर्ने हुन्छ)"</string>
     <string name="confirm_format_ext4_text" msgid="7940372488624630214">"१६ के.बि. विकासकर्ता मोड प्रयोग गर्नुअघि यो डिभाइसको डेटा पार्टिसन रूपान्तरण गरी ext4 बनाउनु पर्ने हुन्छ। यो मोडमा सफ्टवेयरको पूर्णताका बारेमा ग्यारेन्टी गर्न सकिँदैन र बुटलोडर अनलक गरिएका बेला फोनमा भण्डारण गरिएको सबै डेटा जोखिममा पर्न सक्छ। १६ के.बि. विकल्प अन गर्न यसपछि अरू एक पटक रिबुट गर्नु पर्ने हुन्छ। तपाईंले यो मोड प्रयोग गर्न थालेपछि भने तपाईं एक पटक रिबुट गरेकै भरमा ४ के.बि. र १६ के.बि. मोडमा अदलबदल गर्न सक्नुहुन्छ। यी मोडमा केही सुविधाहरू अफ हुने हुनाले केही एपहरू नचल्न सक्छन्। डिभाइसलाई प्रोडक्सन मोडमा फर्काउन तपाईंले ४ के.बि. मोडमा फर्किएर बुटलोडर लक गर्नु पर्ने हुन्छ। यसो गर्दा डिभाइस फ्याक्ट्री रिसेट हुन्छ। डिभाइस Android मा बुट भएपछि विकासकर्ता मोडमा गई OEM अनलक सेटिङ अफ गर्नुहोस्। डिभाइसमा भएको सबै डेटा मेटिने छ र पुष्टि गरेपछि फाइल सिस्टम परिवर्तन भई ext4 हुने छ। यो प्रक्रिया पूरा भएपछि १६ के.बि. अन गर्न कृपया यहाँ फर्किएर आउनुहोस्।"</string>
+    <!-- no translation found for confirm_ext4_button_text (6045501984773738407) -->
+    <skip />
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"रिफर्म्याट गर्न र डेटाको पार्टिसन मेटाएर ext4 बनाउन सकिएन।"</string>
     <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"१६ के.बि. मोड प्रयोग गर्न बुटलोडर अनलक गर्नु पर्ने हुन्छ"</string>
     <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"१६ के.बि. विकासकर्ता मोड प्रयोग गर्नुअघि यो डिभाइसको बुटलोडर अनलक गर्नु पर्ने हुन्छ। यो मोडमा सफ्टवेयरको पूर्णताका बारेमा ग्यारेन्टी गर्न सकिँदैन र बुटलोडर अनलक गरिएका बेला फोनमा भण्डारण गरिएको सबै डेटा जोखिममा पर्न सक्छ। १६ के.बि. मोड अन गर्दा प्रयोगकर्ताका सबै डेटा तथा सेटिङ मेटिने छ। बुटलोडर अनलक भइसकेपछि १६ के.बि. विकल्प एक्टिभेट गर्न दुई पटक रिबुट गर्नु पर्ने हुन्छ। तपाईंले यो मोड प्रयोग गर्न थालेपछि भने तपाईं एक पटक रिबुट गरेकै भरमा ४ के.बि. र १६ के.बि. मोडमा अदलबदल गर्न सक्नुहुन्छ। यी मोडमा केही सुविधाहरू अफ हुने हुनाले केही एपहरू नचल्न सक्छन्। डिभाइसलाई प्रोडक्सन मोडमा फर्काउन तपाईंले ४ के.बि. मोडमा फर्किएर OEM/बुटलोडर फेरि लक गर्नु पर्ने हुन्छ (यसो गर्दा डिभाइस फ्याक्ट्री रिसेट हुन्छ)। कृपया बुटलोडर अनलक गर्नुहोस् र फेरि प्रयास गर्नुहोस्। तपाईं &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt; मा गई यसो गर्ने तरिका हेर्न सक्नुहुन्छ"</string>
@@ -5264,8 +5335,7 @@
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"अडियो सुन्न तलको QR कोडलाई मध्य भागमा पार्नुहोस्"</string>
     <string name="audio_streams_add_source_bad_code_state_summary" msgid="6527086906921868757">"पासवर्ड जाँच गरेर फेरि प्रयास गर्नुहोस्"</string>
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"कनेक्ट गर्न सकिएन। फेरि प्रयास गर्नुहोस्।"</string>
-    <string name="audio_streams_add_source_wait_for_response_summary" msgid="3763240901110974606">"कनेक्ट गरिँदै छ…"</string>
-    <string name="audio_streams_wait_for_sync_state_summary" msgid="11905744690831864">"स्क्यान गरिँदै छ…"</string>
+    <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"कनेक्ट गरिँदै छ…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"अडियो स्ट्रिम उपलब्ध छैन"</string>
     <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"हाल यो अडियो स्ट्रिममा केही पनि प्ले भइरहेको छैन"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"बन्द गर्नुहोस्"</string>
@@ -5275,7 +5345,7 @@
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"यो अडियो स्ट्रिम <xliff:g id="DEVICE_NAME">%1$s</xliff:g> मा प्ले हुने छ। भोल्युम नियन्त्रण गर्न यो डिभाइस प्रयोग गर्नुहोस्।"</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"अडियो स्ट्रिम सुन्न सकिएन"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"कम्प्याटिबल हेडफोन कनेक्ट गरियो"</string>
-    <string name="audio_streams_activity_title" msgid="9011162151277443663">"ब्रोडकास्टहरू"</string>
+    <string name="audio_streams_activity_title" msgid="6766869545769831935">"अडियो स्ट्रिमहरू"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"कुनै पनि पासवर्ड छैन"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"थप जान्नुहोस्"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"यो अडियो स्ट्रिम <xliff:g id="DEVICE_NAME">%1$s</xliff:g> मा प्ले गर्न सकिएन।"</string>
