--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -556,6 +556,28 @@
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"Tik om in te stellen"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"Ontgrendelen met vingerafdruk voor privégedeelte"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"Ontgrendelen via gezichtsherkenning voor privégedeelte"</string>
+    <!-- no translation found for private_space_biometric_unlock_title (1978145237698659673) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_title (5187730641333680942) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_message (9092068873421435300) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_footer_message (7125255484447984854) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_finish_message (4754797926493316965) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_title (3717541082520006032) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_message (250239418499081821) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_looking (5694757845303924042) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_less_secure (8460719783943533172) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_require_attention_details (2799569069549999689) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_footer (7722256209563543711) -->
+    <skip />
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"Manieren om te ontgrendelen"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"Dezelfde als die van het apparaat"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"Nieuwe vergrendeling voor privégedeelte kiezen?"</string>
@@ -1470,6 +1492,8 @@
     <string name="error_duplicate_apn_entry" msgid="7792928408935276618">"Dubbele APN-invoer."</string>
     <string name="error_name_empty" msgid="1258275899283079142">"Het veld \'Naam\' mag niet leeg zijn."</string>
     <string name="error_apn_empty" msgid="7657491065443746915">"De APN mag niet leeg zijn."</string>
+    <!-- no translation found for error_apn_type_empty (8697781608034468813) -->
+    <skip />
     <string name="error_mcc_not3" msgid="883659545640179094">"MCC-veld moet 3 cijfers bevatten."</string>
     <string name="error_mnc_not23" msgid="7642478711158474918">"MNC-veld moet 2 of 3 cijfers bevatten."</string>
     <string name="error_adding_apn_type" msgid="1324263534991467943">"De provider staat het toevoegen van APN\'s van het type %s niet toe."</string>
@@ -3324,7 +3348,24 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"Onderbrekingen toestaan die een geluid laten horen"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"Blokkeer visuele onderbreking"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"Visuele signalen toestaan"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"Weergaveopties voor verborgen meldingen"</string>
+    <string name="mode_interruption_filter_title" msgid="6657431939996264417">"Meldingen die je mogen storen"</string>
+    <string name="mode_device_effects_title" msgid="5857008332618433744">"Aanvullende acties"</string>
+    <string name="mode_display_settings_title" msgid="8132825978346535472">"Weergave-instellingen"</string>
+    <string name="mode_display_options_section" msgid="5151597748243866532">"Weergaveopties"</string>
+    <string name="mode_grayscale_title" msgid="6027553257331235461">"Grijstinten"</string>
+    <string name="mode_grayscale_title_secondary_list" msgid="2662593380253642581">"grijstinten"</string>
+    <string name="mode_grayscale_summary" msgid="6682099523626777038">"Scherm op zwart-wit zetten"</string>
+    <string name="mode_aod_title" msgid="5903435070341237325">"Scherm donker houden"</string>
+    <string name="mode_aod_title_secondary_list" msgid="8268180392811027557">"scherm donker houden"</string>
+    <string name="mode_aod_summary" msgid="7516159044827627065">"Scherm dat altijd actief is uitzetten"</string>
+    <string name="mode_wallpaper_title" msgid="5549693923133928374">"Achtergrond dimmen"</string>
+    <string name="mode_wallpaper_title_secondary_list" msgid="5034602021811580157">"achtergrond dimmen"</string>
+    <string name="mode_wallpaper_summary" msgid="665480011615603784">"Helderheid van de achtergrond filteren"</string>
+    <string name="mode_dark_theme_title" msgid="8099007897943513209">"Donker thema aanzetten"</string>
+    <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"donker thema aanzetten"</string>
+    <string name="mode_dark_theme_summary" msgid="8428887193785431898">"OS en apps wijzigen zodat de voorkeur wordt gegeven aan lichte tekst op een donkere achtergrond, wat prettiger voor de ogen kan zijn en op sommige apparaten een aanzienlijke batterijbesparing oplevert"</string>
+    <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Geen weergavewijzigingen}=1{{effect_1}}=2{{effect_1} en {effect_2}}=3{{effect_1}, {effect_2} en {effect_3}}other{{effect_1}, {effect_2} en nog #}}"</string>
+    <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Weergaveopties voor gefilterde meldingen"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Als Niet storen aanstaat"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Geen geluid van meldingen"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Je ziet meldingen op je scherm"</string>
@@ -3335,9 +3376,9 @@
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"Aangepast"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"Aangepaste instelling aanzetten"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Aangepaste instelling verwijderen"</string>
-    <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"Geen geluid van meldingen"</string>
-    <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"Gedeeltelijk verborgen"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Geen zichtbare of hoorbare meldingen"</string>
+    <string name="zen_mode_restrict_notifications_summary_muted" msgid="2826459087306271381">"Meldingen getoond"</string>
+    <string name="zen_mode_restrict_notifications_summary_custom" msgid="6455811408721183198">"Meldingen gedeeltelijk verborgen"</string>
+    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="2157279412167366119">"Meldingen verborgen"</string>
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"Aangepaste beperkingen"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"Als het scherm aanstaat"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"Als het scherm uitstaat"</string>
@@ -4505,7 +4546,8 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"<xliff:g id="LABEL">%s</xliff:g> afspelen op"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"Audio wordt afgespeeld op"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"Dit apparaat"</string>
-    <string name="media_output_audio_sharing" msgid="6531742594884809737">"Audio delen"</string>
+    <!-- no translation found for media_output_audio_sharing (8169294522817470115) -->
+    <skip />
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"Niet beschikbaar tijdens gesprekken"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"Opnemen op"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"Deze APN kan niet worden gewijzigd."</string>
@@ -4701,6 +4743,10 @@
     <string name="sim_onboarding_next" msgid="6415025179929475355">"Volgende"</string>
     <string name="sim_onboarding_progressbar_turning_sim_on" msgid="1163318788393361574">"<xliff:g id="CARRIER_NAME">%1$s</xliff:g> aanzetten…"</string>
     <string name="mobile_network_spn_title" msgid="3053793174495329077">"Mobiel netwerk"</string>
+    <!-- no translation found for imei_primary (5312232202518974440) -->
+    <skip />
+    <!-- no translation found for meid_primary (3256732684155678106) -->
+    <skip />
     <string name="mobile_network_phone_number_title" msgid="2090794402855021784">"Telefoonnummer"</string>
     <string name="mobile_network_sim_label_color_title" msgid="2401352348041132876">"Simlabel en -kleur"</string>
     <string name="sim_setup_channel_id" msgid="8797972565087458515">"Netwerkactivering"</string>
@@ -4804,14 +4850,15 @@
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
     <string name="enable_16k_pages" msgid="8001470927566110689">"Opstarten met paginagrootte 16 K"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"Opstarten met kernel voor paginagrootte van 16 K"</string>
-    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"Wisselen van 4 KB-modus naar 16 KB-modus"</string>
-    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"Je gebruikt de niet-paginagebonden modus met een kernel van 4 KB en je gaat naar de 16 KB-modus. In deze modus kan de software-integriteit niet worden gegarandeerd en kunnen alle gegevens die op de telefoon zijn opgeslagen, terwijl de bootloader is ontgrendeld, gevaar lopen. Je apparaat wordt opnieuw opgestart. Sommige functies worden in deze modi uitgezet, dus sommige apps werken misschien niet. Als je het apparaat wilt terugzetten naar de productiemodus, moet je teruggaan naar de 4 KB-modus en de bootloader vergrendelen. Hierdoor worden de fabrieksinstellingen teruggezet op het apparaat. Nadat het apparaat succesvol is opgestart in Android, zet je OEM-ontgrendeling uit in de Ontwikkelaarsopties."</string>
+    <string name="confirm_enable_16k_pages_title" msgid="611010487387251491">"Wisselen van 4 KB-modus naar 16 KB-modus"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="6129208614283750541">"Je gebruikt de niet-paginagebonden modus met een kernel van 4 KB en je gaat naar de 16 KB-modus. In deze modus kan de software-integriteit niet worden gegarandeerd en kunnen alle gegevens die op de telefoon zijn opgeslagen terwijl de bootloader is ontgrendeld, gevaar lopen. Je apparaat wordt opnieuw opgestart. Sommige functies worden in deze modi uitgezet, dus sommige apps werken misschien niet. Als je het apparaat wilt terugzetten naar de productiemodus, moet je teruggaan naar de 4 KB-modus en de bootloader vergrendelen. Hierdoor worden de fabrieksinstellingen teruggezet op het apparaat. Nadat het apparaat succesvol is opgestart in Android, zet je OEM-ontgrendeling uit via Ontwikkelaarsopties."</string>
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"Wisselen van 16 KB-modus naar 4 KB-modus"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"Je gebruikt de niet-paginagebonden modus met een kernel van 16 KB en je gaat naar de 4 KB-modus. In deze modus kan de software-integriteit niet worden gegarandeerd en kunnen alle gegevens die op de telefoon zijn opgeslagen, terwijl de bootloader is ontgrendeld, gevaar lopen. Je apparaat wordt opnieuw opgestart. Sommige functies worden in deze modi uitgezet, dus sommige apps werken misschien niet. Als je het apparaat wilt terugzetten naar de productiemodus, moet je de bootloader vergrendelen. Hierdoor worden de fabrieksinstellingen teruggezet op het apparaat. Nadat het apparaat succesvol is opgestart in Android, zet je OEM-ontgrendeling uit in de Ontwikkelaarsopties."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"Kan kernel niet updaten naar kernel voor pagina\'s van 16 KB."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"Wijziging toepassen"</string>
     <string name="confirm_format_ext4_title" msgid="6696191800594435577">"Apparaat omzetten naar ext4? (vereist voor 16 KB-modus)"</string>
     <string name="confirm_format_ext4_text" msgid="7940372488624630214">"De gegevenspartitie van dit apparaat moet worden geconverteerd naar ext4 voordat je de 16 KB-ontwikkelaarsoptie kunt gebruiken. In deze modus kan de software-integriteit niet worden gegarandeerd en kunnen alle gegevens die op de telefoon zijn opgeslagen, terwijl de bootloader is ontgrendeld, gevaar lopen. Als je de 16 KB-optie activeert, moet je het apparaat hierna nog een keer opnieuw opstarten. Zodra je in deze modus zit, kun met één keer opnieuw opstarten wisselen tussen de 4 KB- en 16 KB-modus. Sommige functies worden in deze modi uitgezet, dus sommige apps werken misschien niet. Als je het apparaat wilt terugzetten naar de productiemodus, moet je teruggaan naar de 4 KB-modus en daarna de bootloader vergrendelen. Hierdoor worden de fabrieksinstellingen teruggezet op het apparaat. Nadat het apparaat succesvol is opgestart in Android, zet je OEM-ontgrendeling uit in de Ontwikkelaarsopties. Het apparaat wordt gewist en het bestandssysteem wordt na bevestiging gewijzigd in ext4. Als dit is gebeurd, moet je terugkomen om 16 KB opnieuw aan te zetten."</string>
+    <string name="confirm_ext4_button_text" msgid="6045501984773738407">"Alle gegevens wissen"</string>
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"Kan niet omzetten en de gegevenspartitie niet wissen naar ext4."</string>
     <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"Bootloader moet worden ontgrendeld voor 16 KB-modus"</string>
     <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"De bootloader moet op dit apparaat ontgrendeld zijn voordat je de 16 KB-ontwikkelaarsoptie kunt gebruiken. In deze modus kan de software-integriteit niet worden gegarandeerd en kunnen alle gegevens die op de telefoon zijn opgeslagen, terwijl de bootloader is ontgrendeld, gevaar lopen. Alle gebruikersgegevens en instellingen worden gewist als de 16 KB-modus wordt geactiveerd. Na het ontgrendelen van de bootloader moet je voor het activeren van de 16 KB-optie het apparaat 2 keer opnieuw opstarten. Zodra je in deze modus zit, kun met één keer opnieuw opstarten wisselen tussen de 4 KB- en 16 KB-modus. Sommige functies worden in deze modi uitgezet, dus sommige apps werken misschien niet. Als je het apparaat wilt terugzetten naar de productiemodus, moet je teruggaan naar de 4 KB-modus en daarna OEM en de bootloader vergrendelen. Hierdoor worden de fabrieksinstellingen teruggezet op het apparaat. Ontgrendel de bootloader en probeer het opnieuw. Instructies hiervoor vind je op &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt;"</string>
@@ -5264,8 +5311,7 @@
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"Centreer de QR-code hieronder om te beginnen met luisteren"</string>
     <string name="audio_streams_add_source_bad_code_state_summary" msgid="6527086906921868757">"Check het wachtwoord en probeer het opnieuw"</string>
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"Kan geen verbinding maken. Probeer het opnieuw."</string>
-    <string name="audio_streams_add_source_wait_for_response_summary" msgid="3763240901110974606">"Verbinden…"</string>
-    <string name="audio_streams_wait_for_sync_state_summary" msgid="11905744690831864">"Scannen…"</string>
+    <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"Verbinden…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"Audiostream is niet beschikbaar"</string>
     <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"Deze audiostream speelt op dit moment niets af"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"Sluiten"</string>
@@ -5275,7 +5321,7 @@
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"De audiostream wordt afgespeeld op <xliff:g id="DEVICE_NAME">%1$s</xliff:g>. Gebruik dit apparaat om het volume te regelen."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"Kan de audiostream niet beluisteren"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"compatibele koptelefoon verbonden"</string>
-    <string name="audio_streams_activity_title" msgid="9011162151277443663">"Uitzendingen"</string>
+    <string name="audio_streams_activity_title" msgid="6766869545769831935">"Audiostreams"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"Geen wachtwoord"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Meer informatie"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Kan deze audiostream niet afspelen op <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
