--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -556,6 +556,28 @@
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"సెటప్ చేయడానికి ట్యాప్ చేయండి"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"ప్రైవేట్ స్పేస్ కోసం వేలిముద్ర అన్‌లాక్"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"ప్రైవేట్ స్పేస్ కోసం ఫేస్ అన్‌లాక్"</string>
+    <!-- no translation found for private_space_biometric_unlock_title (1978145237698659673) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_title (5187730641333680942) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_message (9092068873421435300) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_footer_message (7125255484447984854) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_finish_message (4754797926493316965) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_title (3717541082520006032) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_message (250239418499081821) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_looking (5694757845303924042) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_less_secure (8460719783943533172) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_require_attention_details (2799569069549999689) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_footer (7722256209563543711) -->
+    <skip />
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"అన్‌లాక్ చేయడానికి మార్గాలు"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"దీనిక్కూడా పరికర స్క్రీన్ లాక్‌నే వాడండి"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"ప్రైవేట్ స్పేస్ కోసం కొత్త లాక్‌ను ఎంచుకోవాలా?"</string>
@@ -1470,6 +1492,8 @@
     <string name="error_duplicate_apn_entry" msgid="7792928408935276618">"డూప్లికేట్ apn ఎంట్రీ."</string>
     <string name="error_name_empty" msgid="1258275899283079142">"పేరు ఫీల్డ్ ఖాళీగా ఉండకూడదు."</string>
     <string name="error_apn_empty" msgid="7657491065443746915">"APN ఖాళీగా ఉండకూడదు."</string>
+    <!-- no translation found for error_apn_type_empty (8697781608034468813) -->
+    <skip />
     <string name="error_mcc_not3" msgid="883659545640179094">"MCC ఫీల్డ్ తప్పనిసరిగా 3 అంకెలు కలిగి ఉండాలి."</string>
     <string name="error_mnc_not23" msgid="7642478711158474918">"MNC ఫీల్డ్‌లో తప్పనిసరిగా 2 లేదా 3 అంకెలు ఉండాలి."</string>
     <string name="error_adding_apn_type" msgid="1324263534991467943">"క్యారియర్ %s రకమైన APNలను జోడించడాన్ని అనుమతించదు."</string>
@@ -3324,7 +3348,42 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"శబ్దాలు చేసే అంతరాయాలను అనుమతించండి"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"దృశ్య అంతరాయాలను బ్లాక్ చేయండి"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"విజిబిలిటీ సంకేతాలను అనుమతించండి"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"దాచబడిన నోటిఫికేషన్‌లకు డిస్‌ప్లే ఆప్షన్‌లు"</string>
+    <!-- no translation found for mode_interruption_filter_title (6657431939996264417) -->
+    <skip />
+    <!-- no translation found for mode_device_effects_title (5857008332618433744) -->
+    <skip />
+    <!-- no translation found for mode_display_settings_title (8132825978346535472) -->
+    <skip />
+    <!-- no translation found for mode_display_options_section (5151597748243866532) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_title (6027553257331235461) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_title_secondary_list (2662593380253642581) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_summary (6682099523626777038) -->
+    <skip />
+    <!-- no translation found for mode_aod_title (5903435070341237325) -->
+    <skip />
+    <!-- no translation found for mode_aod_title_secondary_list (8268180392811027557) -->
+    <skip />
+    <!-- no translation found for mode_aod_summary (7516159044827627065) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_title (5549693923133928374) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_title_secondary_list (5034602021811580157) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_summary (665480011615603784) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_title (8099007897943513209) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_title_secondary_list (4761262694149772845) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_summary (8428887193785431898) -->
+    <skip />
+    <!-- no translation found for mode_display_settings_summary (5929234706883482380) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_title (4926944083757096458) -->
+    <skip />
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\'అంతరాయం కలిగించవద్దు\' మోడ్ ఆన్‌లో ఉన్నప్పుడు"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"నోటిఫికేషన్‌ల సౌండ్ రాదు"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"మీ స్క్రీన్‌పై మీకు నోటిఫికేషన్‌లు కనిపిస్తాయి"</string>
@@ -3335,9 +3394,12 @@
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"అనుకూలం"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"అనుకూల సెట్టింగ్‌ని ప్రారంభించండి"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"అనుకూల సెట్టింగ్‌ని తీసివేయండి"</string>
-    <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"నోటిఫికేషన్‌ల సౌండ్ రాదు"</string>
-    <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"పాక్షికంగా దాచబడింది"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"నోటిఫికేషన్‌లు కనిపించవు, వినిపించవు"</string>
+    <!-- no translation found for zen_mode_restrict_notifications_summary_muted (2826459087306271381) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_summary_custom (6455811408721183198) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_summary_hidden (2157279412167366119) -->
+    <skip />
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"అనుకూల పరిమితులు"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"స్క్రీన్ ఆన్‌లో ఉన్నప్పుడు"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"స్క్రీన్ ఆఫ్‌లో ఉన్నప్పుడు"</string>
@@ -4505,7 +4567,8 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"ఇందులో <xliff:g id="LABEL">%s</xliff:g>ను ప్లే చేయండి"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"ఆడియో దీనిలో ప్లే అవుతుంది"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"ఈ పరికరం"</string>
-    <string name="media_output_audio_sharing" msgid="6531742594884809737">"ఆడియో షేరింగ్"</string>
+    <!-- no translation found for media_output_audio_sharing (8169294522817470115) -->
+    <skip />
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"కాల్స్‌ల సమయంలో అందుబాటులో ఉండదు"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"కాల్ తీసుకోండి"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"ఈ APNని మార్చడానికి సాధ్యం కాదు."</string>
@@ -4701,6 +4764,10 @@
     <string name="sim_onboarding_next" msgid="6415025179929475355">"తర్వాత"</string>
     <string name="sim_onboarding_progressbar_turning_sim_on" msgid="1163318788393361574">"<xliff:g id="CARRIER_NAME">%1$s</xliff:g>ను ఆన్ చేస్తోంది…"</string>
     <string name="mobile_network_spn_title" msgid="3053793174495329077">"మొబైల్ నెట్‌వర్క్"</string>
+    <!-- no translation found for imei_primary (5312232202518974440) -->
+    <skip />
+    <!-- no translation found for meid_primary (3256732684155678106) -->
+    <skip />
     <string name="mobile_network_phone_number_title" msgid="2090794402855021784">"ఫోన్ నంబర్"</string>
     <string name="mobile_network_sim_label_color_title" msgid="2401352348041132876">"SIM లేబుల్, రంగు"</string>
     <string name="sim_setup_channel_id" msgid="8797972565087458515">"నెట్‌వర్క్ యాక్టివేషన్"</string>
@@ -4804,14 +4871,18 @@
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
     <string name="enable_16k_pages" msgid="8001470927566110689">"16KB పేజీ సైజ్‌తో బూట్ చేయండి"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"16KBపేజీ సైజ్ సపోర్ట్ చేసే కెర్నెల్‌తో పరికరం బూట్"</string>
-    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"4kB మోడ్ నుండి 16KB మోడ్‌కు స్విచ్ అవ్వండి"</string>
-    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"మీరు 4kB కెర్నల్‌ రన్ అవుతున్న పేజీ అగ్నోస్టిక్ మోడ్‌లో ఉన్నారు, ఇప్పుడు 16KB మోడ్‌కు స్విచ్ అవుతున్నారు. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఇవ్వబడదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ చేయబడిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. ఇది పరికరాన్ని రీబూట్ చేస్తుంది. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. పరికరాన్ని ప్రొడక్షన్ మోడ్‌కు అందించడానికి, మీరు 4kB మోడ్‌కు స్విచ్ అయ్యి, ఆపై పరికరాన్ని ఫ్యాక్టరీ రీసెట్ చేసే బూట్‌లోడర్‌ను లాక్ చేయాలి. పరికరం విజయవంతంగా Androidలోకి బూట్ అయిన తర్వాత, డెవలపర్ ఆప్షన్‌లలో OEM అన్‌లాకింగ్‌ను డిజేబుల్ చేయండి."</string>
+    <!-- no translation found for confirm_enable_16k_pages_title (611010487387251491) -->
+    <skip />
+    <!-- no translation found for confirm_enable_16k_pages_text (6129208614283750541) -->
+    <skip />
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"16KB మోడ్ నుండి 4KB మోడ్‌కు స్విచ్ అవ్వండి"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"మీరు 16KB కెర్నల్‌ రన్ అవుతున్న పేజీ అగ్నోస్టిక్ మోడ్‌లో ఉన్నారు, ఇప్పుడు 4KB మోడ్‌కు స్విచ్ అవుతున్నారు. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఇవ్వబడదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ చేయబడిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. ఇది పరికరాన్ని రీబూట్ చేస్తుంది. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. పరికరాన్ని ప్రొడక్షన్ మోడ్‌కు అందించడానికి, మీరు పరికరాన్ని ఫ్యాక్టరీ రీసెట్ చేసే బూట్‌లోడర్‌ను లాక్ చేయాలి. పరికరం విజయవంతంగా Androidలోకి బూట్ అయిన తర్వాత, డెవలపర్ ఆప్షన్‌లలో OEM అన్‌లాకింగ్‌ను డిజేబుల్ చేయండి."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"కెర్నెల్‌ను 16KB పేజీల అనుకూల కెర్నెల్‌తో అప్‌డేట్ చేయడం విఫలమైంది."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"మార్పు వర్తింపజేయబడుతోంది"</string>
     <string name="confirm_format_ext4_title" msgid="6696191800594435577">"పరికరాన్ని ext4కి రీఫార్మాట్ చేయాలా? (16KB మోడ్ కోసం ఇది అవసరం)"</string>
     <string name="confirm_format_ext4_text" msgid="7940372488624630214">"16KB డెవలపర్ ఆప్షన్‌ను ఉపయోగించే ముందు ఈ పరికరం తాలూకు డేటా పార్టిషన్‌ను ext4కి మార్చాలి. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఇవ్వబడదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ చేయబడిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. 16KB ఆప్షన్‌ను యాక్టివేట్ చేయడానికి దీని తర్వాత మరొక సారి రీబూట్ చేయాల్సిన అవసరం ఉంది. మీరు ఈ మోడ్‌లో ఉన్న తర్వాత, మీరు ఒకసారి రీబూట్ చేయడం ద్వారా 4KB, 16KB మోడ్‌ల మధ్య ముందుకు వెనుకకు మారవచ్చు. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. పరికరాన్ని ప్రొడక్షన్ మోడ్‌కు అందించడానికి, మీరు 4KB మోడ్‌కు స్విచ్ అవ్వాలి, ఆపై పరికరాన్ని ఫ్యాక్టరీ రీసెట్ చేసే బూట్‌లోడర్‌ను లాక్ చేయాలి. పరికరం విజయవంతంగా Androidలోకి బూట్ అయిన తర్వాత, డెవలపర్ ఆప్షన్‌లలో OEM అన్‌లాకింగ్‌ను డిజేబుల్ చేయండి. నిర్ధారించిన తర్వాత పరికరం పూర్తిగా తొలగించబడుతుంది, ఫైల్‌సిస్టమ్ ext4కి మార్చబడుతుంది. ఇది పూర్తయిన తర్వాత, దయచేసి 16KBని మళ్లీ ఎనేబుల్ చేయడానికి తిరిగి రండి."</string>
+    <!-- no translation found for confirm_ext4_button_text (6045501984773738407) -->
+    <skip />
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"డేటా పార్టిషన్‌ను ext4కి రీఫార్మాట్ చేయడం, పూర్తిగా తొలగించడం విఫలమైంది."</string>
     <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"16KB మోడ్ కోసం బూట్‌లోడర్‌ను అన్‌లాక్ చేయడం అవసరం"</string>
     <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"ఈ పరికరం 16KB డెవలపర్ ఆప్షన్‌ను ఉపయోగించే ముందు బూట్‌లోడర్‌ను అన్‌లాక్ చేసి ఉండాలి. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఇవ్వబడదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ చేయబడిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. 16KB మోడ్‌ను యాక్టివేట్ చేసినప్పుడు మొత్తం యూజర్ డేటా, సెట్టింగ్‌లు పూర్తిగా తొలగించబడతాయి. ఒక్కసారి బూట్‌లోడర్‌ను అన్‌లాక్ చేసిన తర్వాత, 16KB ఆప్షన్‌ను యాక్టివేట్ చేయడానికి రెండుసార్లు రీబూట్ చేయాల్సిన అవసరం ఉంది. మీరు ఈ మోడ్‌లో ఉన్న తర్వాత, మీరు ఒకసారి రీబూట్ చేయడం ద్వారా 4KB, 16KB మోడ్‌ల మధ్య ముందుకు వెనుకకు మారవచ్చు. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. పరికరాన్ని ప్రొడక్షన్ మోడ్‌కు అందించడానికి, మీరు 4KB మోడ్‌కు స్విచ్ అవ్వాలి, ఆపై పరికరాన్ని OEM/బూట్‌లోడర్ లాక్ (దేనిని ఫ్యాక్టరీ రీసెట్ చేస్తుంది) చేయాలి. దయచేసి బూట్‌లోడర్‌ను అన్‌లాక్ చేసి, మళ్లీ ట్రై చేయండి. మీరు దీన్ని ఎలా చేయాలో సూచనలను &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt; లింక్‌లో చూడవచ్చు"</string>
@@ -5264,8 +5335,7 @@
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"వినడం ప్రారంభించడానికి, కింద ఉన్న QR కోడ్‌ను మధ్యలో ఉంచండి"</string>
     <string name="audio_streams_add_source_bad_code_state_summary" msgid="6527086906921868757">"పాస్‌వర్డ్‌ను చెక్ చేసి, మళ్లీ ట్రై చేయండి"</string>
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"కనెక్ట్ చేయడం సాధ్యం కాదు. మళ్లీ ట్రై చేయండి."</string>
-    <string name="audio_streams_add_source_wait_for_response_summary" msgid="3763240901110974606">"కనెక్ట్ అవుతోంది…"</string>
-    <string name="audio_streams_wait_for_sync_state_summary" msgid="11905744690831864">"స్కాన్ చేస్తోంది…"</string>
+    <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"కనెక్ట్ అవుతోంది…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"ఆడియో స్ట్రీమ్ అందుబాటులో లేదు"</string>
     <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"ఈ ఆడియో స్ట్రీమ్ ప్రస్తుతం ఏదీ ప్లే చేయడం లేదు"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"మూసివేయండి"</string>
@@ -5275,7 +5345,7 @@
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"ఆడియో స్ట్రీమ్ <xliff:g id="DEVICE_NAME">%1$s</xliff:g>‌లో ప్లే అవుతుంది. వాల్యూమ్‌ను కంట్రోల్ చేయడానికి ఈ పరికరాన్ని ఉపయోగించండి."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"ఆడియో స్ట్రీమ్‌ను వినడం సాధ్యపడదు"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"కనెక్ట్ చేయబడిన అనుకూల హెడ్‌ఫోన్స్"</string>
-    <string name="audio_streams_activity_title" msgid="9011162151277443663">"ప్రసారాలు"</string>
+    <string name="audio_streams_activity_title" msgid="6766869545769831935">"ఆడియో స్ట్రీమ్‌లు"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"పాస్‌వర్డ్ ఏదీ లేదు"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"మరింత తెలుసుకోండి"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"ఈ ఆడియో స్ట్రీమ్‌ను <xliff:g id="DEVICE_NAME">%1$s</xliff:g>‌లో ప్లే చేయడం సాధ్యపడదు."</string>
