--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -556,6 +556,28 @@
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"ለማዋቀር መታ ያድርጉ"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"ለግል ቦታ በጣት አሻራ መክፈቻ"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"ለግል ቦታ በመልክ መክፈት"</string>
+    <!-- no translation found for private_space_biometric_unlock_title (1978145237698659673) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_title (5187730641333680942) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_message (9092068873421435300) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_footer_message (7125255484447984854) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_finish_message (4754797926493316965) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_title (3717541082520006032) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_message (250239418499081821) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_looking (5694757845303924042) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_less_secure (8460719783943533172) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_require_attention_details (2799569069549999689) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_footer (7722256209563543711) -->
+    <skip />
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"የሚከፈትባቸው መንገዶች"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"ከመሣሪያ ማያ ገጽ መቆለፊያ ጋር ተመሳሳይ"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"ለግል ቦታ አዲስ ቁልፍ ይመርጣሉ?"</string>
@@ -563,8 +585,7 @@
     <string name="private_space_auto_lock_title" msgid="8663409382910601261">"የግል ቦታን በራስ-ሰር ቆልፍ"</string>
     <string name="private_space_auto_lock_page_summary" msgid="8679844515655838654">"መሣሪያዎን ለተወሰነ ጊዜ ካልተጠቀሙበት የግል ቦታዎን በራስ-ሰር መቆለፍ ይችላሉ"</string>
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"መሣሪያ በተቆለፈ ቁጥር"</string>
-    <!-- no translation found for private_space_auto_lock_after_inactivity (7107814517866649733) -->
-    <skip />
+    <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"ማያ ጊዜው ካለቀ በኋላ 5 ደቂቃዎች"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"መሣሪያው እንደገና ከጀመረ ብቻ"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"የግል ቦታን ይደብቁ"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"በሚቆለፍበት ጊዜ የግል ቦታን ይደብቁ"</string>
@@ -1471,6 +1492,8 @@
     <string name="error_duplicate_apn_entry" msgid="7792928408935276618">"የተባዛ የኤፒኤን ግቤት።"</string>
     <string name="error_name_empty" msgid="1258275899283079142">"የስም መስክ ባዶ ሊሆን አይችልም"</string>
     <string name="error_apn_empty" msgid="7657491065443746915">"APN ባዶ መሆን አይችልም።"</string>
+    <!-- no translation found for error_apn_type_empty (8697781608034468813) -->
+    <skip />
     <string name="error_mcc_not3" msgid="883659545640179094">"የMCC መስክ 3 አሀዝ መሆን አለበት።"</string>
     <string name="error_mnc_not23" msgid="7642478711158474918">"የMNC መስክ 2 ወይም 3 አሀዝ መሆን አለበት።"</string>
     <string name="error_adding_apn_type" msgid="1324263534991467943">"የአገልግሎት አቅራቢ ዓይነታቸው %s የሆኑ ኤፒኤንዎችን ማከልን አይፈቅድም።"</string>
@@ -2324,8 +2347,7 @@
     <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"ቀይ-አረንጓዴ"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"ሰማያዊ-ቢጫ"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"ግርጥነት"</string>
-    <!-- no translation found for daltonizer_saturation_title (2999486412114963068) -->
-    <skip />
+    <string name="daltonizer_saturation_title" msgid="2999486412114963068">"ክብደት"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"አረንጓዴ ደካማ፣ ዲዩቴራኖማሊ"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"ቀይ ደካማ፣ ፕሮታኖማሊ"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"ትራይታኖማሊ"</string>
@@ -3306,8 +3328,7 @@
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"የተገናኙ መሣሪያዎች ቅንብሮች"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{ምንም}=1{1 መርሐግብር ተቀናብሯል}one{# መርሐግብሮች ተቀናብረዋል}other{# መርሐግብሮች ተቀናብረዋል}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"አይረብሹ"</string>
-    <!-- no translation found for zen_modes_list_title (5138745349253275428) -->
-    <skip />
+    <string name="zen_modes_list_title" msgid="5138745349253275428">"ቅድሚያ ሁነታዎች"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"በአስፈላጊ ሰዎች እና መተግበሪያዎች ብቻ ማሳወቂያን ያግኙ"</string>
     <string name="zen_mode_slice_subtitle" msgid="6849372107272604160">"መቆራረጦችን ይገድቡ"</string>
     <string name="zen_mode_settings_turn_on_dialog_title" msgid="7500702838426404527">"አትረብሽን አብራ"</string>
@@ -3327,7 +3348,42 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"ድምፅ የሚፈጥሩ ረብሻዎችን ፍጠር"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"ምስላዊ ረብሻዎችን አግድ"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"ምስላዊ ምልክቶችን ፍቀድ"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"ለተደበቁ ማሳወቂያዎች የማሳያ አማራጮች"</string>
+    <!-- no translation found for mode_interruption_filter_title (6657431939996264417) -->
+    <skip />
+    <!-- no translation found for mode_device_effects_title (5857008332618433744) -->
+    <skip />
+    <!-- no translation found for mode_display_settings_title (8132825978346535472) -->
+    <skip />
+    <!-- no translation found for mode_display_options_section (5151597748243866532) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_title (6027553257331235461) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_title_secondary_list (2662593380253642581) -->
+    <skip />
+    <!-- no translation found for mode_grayscale_summary (6682099523626777038) -->
+    <skip />
+    <!-- no translation found for mode_aod_title (5903435070341237325) -->
+    <skip />
+    <!-- no translation found for mode_aod_title_secondary_list (8268180392811027557) -->
+    <skip />
+    <!-- no translation found for mode_aod_summary (7516159044827627065) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_title (5549693923133928374) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_title_secondary_list (5034602021811580157) -->
+    <skip />
+    <!-- no translation found for mode_wallpaper_summary (665480011615603784) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_title (8099007897943513209) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_title_secondary_list (4761262694149772845) -->
+    <skip />
+    <!-- no translation found for mode_dark_theme_summary (8428887193785431898) -->
+    <skip />
+    <!-- no translation found for mode_display_settings_summary (5929234706883482380) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_title (4926944083757096458) -->
+    <skip />
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"አትረብሽ ሲበራ"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"ከማሳወቂያዎች ምንም ድምፅ የለም"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"ማሳወቂያዎችን በማያዎ ላይ ይመለከታሉ"</string>
@@ -3338,9 +3394,12 @@
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"ብጁ"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"ብጁ ቅንብን አንቃ"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"ብጁ ቅንብን አስወግድ"</string>
-    <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"ከማሳወቂያዎች ምንም ድምፅ የለም"</string>
-    <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"በከፊል ተደብቋል"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"ማሳወቂያዎች ላይ ምንም ምስሎች ወይም ድምፅ የለም"</string>
+    <!-- no translation found for zen_mode_restrict_notifications_summary_muted (2826459087306271381) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_summary_custom (6455811408721183198) -->
+    <skip />
+    <!-- no translation found for zen_mode_restrict_notifications_summary_hidden (2157279412167366119) -->
+    <skip />
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"ብጁ ገደቦች"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"ማያ ገጹ ሲበራ"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"ማያ ገጹ ሲጠፋ"</string>
@@ -4236,7 +4295,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"የአሰሳ ሁነታ"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2-አዝራር ዳሰሳ"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"መተግበሪያዎችን ለመቀየር በመነሻ አዝራሩ ላይ ወደ ላይ ይጥረጉ። ሁሉንም መተግበሪያዎች ለማየት እንደገና ወደ ላይ ይጥረጉ። ለመመለስ የተመለስ አአዝራሩን መታ ያድርጉ።"</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ደህንነት እና ድንገተኛ ሁኔታ"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"ደህንነት እና ድንገተኛ አደጋ"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"የነፍስ አድን ድንገተኛ ጥሪ፣ የሕክምና መረጃ፣ ማንቂያዎች"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"የእጅ ውዝዋዜ ዳሰሳ"</string>
     <string name="edge_to_edge_navigation_summary" msgid="818109176611921504">"ወደ መነሻ ለመሄድ ከማያ ገፅ ከስር ወደ ላይ በጣት ያንሸራትቱ። መተግበሪያዎችን ለመቀየር ከስር ወደ ላይ በጣት ያንሸራቱ፣ ይያዙ፣ ከዚያም ይልቀቁ። ወደ ኋላ ለመመለስ ከግራ ወይም ቀኝ ጠርዝ በጣት ያንሸራትቱ።"</string>
@@ -4508,7 +4567,8 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"<xliff:g id="LABEL">%s</xliff:g>ን ያጫውቱ በ"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"ኦዲዮ ይጫወታል"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"ይህ መሣሪያ"</string>
-    <string name="media_output_audio_sharing" msgid="6531742594884809737">"የድምጽ ማጋራት"</string>
+    <!-- no translation found for media_output_audio_sharing (8169294522817470115) -->
+    <skip />
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"በጥሪዎች ጊዜ አይገኝም"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"ጥሪው ባዶ እጅ ይነሳ"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"ይህን ኤፒኤን ሊለወጥ አይችልም።"</string>
@@ -4704,6 +4764,10 @@
     <string name="sim_onboarding_next" msgid="6415025179929475355">"ቀጣይ"</string>
     <string name="sim_onboarding_progressbar_turning_sim_on" msgid="1163318788393361574">"<xliff:g id="CARRIER_NAME">%1$s</xliff:g>ን በማብራት ላይ…"</string>
     <string name="mobile_network_spn_title" msgid="3053793174495329077">"የተንቀሳቃሽ ስልክ አውታረ መረብ"</string>
+    <!-- no translation found for imei_primary (5312232202518974440) -->
+    <skip />
+    <!-- no translation found for meid_primary (3256732684155678106) -->
+    <skip />
     <string name="mobile_network_phone_number_title" msgid="2090794402855021784">"ስልክ ቁጥር"</string>
     <string name="mobile_network_sim_label_color_title" msgid="2401352348041132876">"የሲም መሰየሚያ እና ቀለም"</string>
     <string name="sim_setup_channel_id" msgid="8797972565087458515">"አውታረ መረብን ማግበር"</string>
@@ -4807,14 +4871,18 @@
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"ጂፒዩ"</string>
     <string name="enable_16k_pages" msgid="8001470927566110689">"በ16 ኪባ የገጽ መጠን አስነሳ"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"በ16 ኪባ የገጽ መጠን የሚደገፍ ከርነል በመጠቀም መሣሪያን አስነሳ"</string>
-    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"ከ4 ኪባ ሁነታ ወደ 16 ኪባ ሁነታ ይቀይሩ"</string>
-    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"በሁሉም ገጽ ተስማሚ ሁነታ ላይ 4 ኪባ ከርነል እያሄዱ ነው፣ እና ወደ የ16 ኪባ ሁነታ እየቀየሩ ነው። የሶፍትዌር ታማኝነት በዚህ ሁነታ ሊረጋገጥ አይችልም፣ እና bootloader ክፍት ሆኖ ሳለ በስልኩ ላይ የተከማቸ ማንኛውም መረጃ ለአደጋ ሊጋለጥ ይችላል። ይህ መሣሪያውን ዳግም ያስነሳዋል። አንዳንድ ባህሪያት በእነዚህ ሁነታዎችላይ ይሰናከላሉ፣ ስለዚህ አንዳንድ መተግበሪያዎች ላይሰሩ ይችላሉ። መሣሪያውን ወደ የምርት ሁነታ መመለስ እንዲችሉ ወደ የ4 ኪባ ሁነታ መመለስ እና bootloaderን መቆለፍ ይኖርብዎታል፣ ይህም መሣሪያውን ወደ ፋብሪካ ዳግም ያስጀምረዋል። መሣሪያው በተሳካ ሁኔታ ወደ Android ከተነሳ በኋላ በገንቢ አማራጮች ውስጥ የOEM መክፈቻን ያሰናክሉ።"</string>
+    <!-- no translation found for confirm_enable_16k_pages_title (611010487387251491) -->
+    <skip />
+    <!-- no translation found for confirm_enable_16k_pages_text (6129208614283750541) -->
+    <skip />
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"ከ16 ኪባ ሁነታ ወደ 4 ኪባ ሁነታ ይቀይሩ"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"በሁሉም ገጽ ተስማሚ ሁነታ ላይ 16 ኪባ ከርነል እያሄዱ ነው፣ እና ወደ የ4 ኪባ ሁነታ እየቀየሩ ነው። የሶፍትዌር ታማኝነት በዚህ ሁነታ ሊረጋገጥ አይችልም፣ እና bootloader ክፍት ሆኖ ሳለ በስልኩ ላይ የተከማቸ ማንኛውም መረጃ ለአደጋ ሊጋለጥ ይችላል። ይህ መሣሪያውን ዳግም ያስነሳዋል። አንዳንድ ባህሪያት በእነዚህ ሁነታዎችላይ ይሰናከላሉ፣ ስለዚህ አንዳንድ መተግበሪያዎች ላይሰሩ ይችላሉ። መሣሪያውን ወደ የምርት ሁነታ ለመመለስ bootloaderን መቆለፍ ይኖርብዎታል፣ ይህም መሣሪያውን ወደ ፋብሪካ ዳግም ያስጀምረዋል። መሣሪያው በተሳካ ሁኔታ ወደ Android ከተነሳ በኋላ በገንቢ አማራጮች ውስጥ የOEM መክፈቻን ያሰናክሉ።"</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"ከርነልን ወደ 16ኪባ ገጾች ተኳዃኝ ከርነል ማዘመን አልተሳካም።"</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"ለውጦችን በመተግበር ላይ"</string>
     <string name="confirm_format_ext4_title" msgid="6696191800594435577">"መሣሪያው የex4 ቅርጸት ይሰራለት? (ለ16 ኪባ ሁነታ ያስፈልጋል)"</string>
     <string name="confirm_format_ext4_text" msgid="7940372488624630214">"የ16 ኪባ ገንቢ አማራጭን ከመጠቀምዎ በፊት የዚህ መሣሪያ የውሂብ ክፍልፍል ወደ ext4 መቀየር አለበት። የሶፍትዌር ታማኝነት በዚህ ሁነታ ሊረጋገጥ አይችልም፣ እና bootloader ክፍት ሆኖ ሳለ በስልኩ ላይ የተከማቸ ማንኛውም መረጃ ለአደጋ ሊጋለጥ ይችላል። የ16 ኪባ አማራጩን ማግበር ከዚህ በኋላ አንድ ተጨማሪ ዳግም ማስነሳት ያስፈልገዋል። አንዴ በዚህ ሁነታ ላይ ከሆኑ፣ በአንድ ዳግም ማስነሳት ከ4 ኪባ ወደ 16 ኪባ ሁነታ መካከል መቀያየር ይችላሉ። አንዳንድ ባህሪያት በእነዚህ ሁነታዎችላይ ይሰናከላሉ፣ ስለዚህ አንዳንድ መተግበሪያዎች ላይሰሩ ይችላሉ። መሣሪያውን ወደ የምርት ሁነታ መመለስ እንዲችሉ ወደ የ4 ኪባ ሁነታ መመለስ እና bootloaderን መቆለፍ ይኖርብዎታል፣ ይህም መሣሪያውን ወደ ፋብሪካ ዳግም ያስጀምረዋል። መሣሪያው በተሳካ ሁኔታ ወደ Android ከተነሳ በኋላ በገንቢ አማራጮች ውስጥ የOEM መክፈቻን ያሰናክሉ። መሣሪያው ይጠረጋል እና የፋይል ሥርዓቱ ከተረጋገጠ በኋላ ወደ ext4 ይቀየራል። ይህ ከተጠናቀቀ በኋላ እባክዎ 16 ኪባን እንደገና ለማንቃት ይመለሱ።"</string>
+    <!-- no translation found for confirm_ext4_button_text (6045501984773738407) -->
+    <skip />
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"ቅርጸት መሥራት እና የውሂብ ክፍልፋይን ወደ ext4 መጥረግ አልተሳካም።"</string>
     <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"ለ16 ኪባ ሁነታ bootloader ክፍት መሆን አለበት"</string>
     <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"ይህ መሣሪያ የ16 ኪባ ገንቢ አማራጩን ከመጠቀሙ በፊት bootloaderን መክፈት አለበት። የሶፍትዌር ታማኝነት በዚህ ሁነታ ሊረጋገጥ አይችልም፣ እና bootloader ክፍት ሆኖ ሳለ በስልኩ ላይ የተከማቸ ማንኛውም መረጃ ለአደጋ ሊጋለጥ ይችላል። የ16 ኪባ ሁነታ ሲነቃ ሁሉም የተጠቃሚ ውሂብ እና ቅንብሮች ይጠረጋሉ። አንዴ bootloader ከተከፈተ በኋላ የ16 ኪባ አማራጩን ለማንቃት ሁለት ዳግም ማስነሳት ያስፈልገዋል። አንዴ በዚህ ሁነታ ላይ ከሆኑ፣ በአንድ ዳግም ማስነሳት ከ4 ኪባ ወደ 16 ኪባ ሁነታ መካከል መቀያየር ይችላሉ። አንዳንድ ባህሪያት በእነዚህ ሁነታዎችላይ ይሰናከላሉ፣ ስለዚህ አንዳንድ መተግበሪያዎች ላይሰሩ ይችላሉ። መሣሪያውን ወደ የምርት ሁነታ መመለስ እንዲችሉ ወደ የ4 ኪባ ሁነታ መመለስ እና OEM/bootloader መቆለፍ ይኖርብዎታል፣ ይህም መሣሪያውን ወደ (ፋብሪካ ዳግም ያስጀምረዋል)። እባክዎ bootloaderን ይክፈቱ እና እንደገና ይሞክሩ። &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt; ላይ ይህንን እንዴት እንደሚያደርጉ መመሪያዎችን ማየት ይችላሉ"</string>
@@ -5205,8 +5273,7 @@
     <string name="fingerprint_acquired_imager_dirty_udfps" msgid="7005042288289506776">"ከዳሳሹ አጠገብ ያለውን ማያ ገፅዎ ያጽዱ እና እንደገና ይሞክሩ"</string>
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"ወደ ኢሲም ተቀይሯል። አስወግድ እና ጣለው።"</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"በመላው መሣሪያዎች ላይ ያስምሩ"</string>
-    <!-- no translation found for device_diagnostics_title (2914523189695727897) -->
-    <skip />
+    <string name="device_diagnostics_title" msgid="2914523189695727897">"የመሣሪያ ምርመራዎች"</string>
     <string name="audio_sharing_title" msgid="4144157137502923821">"ኦዲዮ ማጋራት"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"ኦዲዮ ያጋሩ"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"ጥሪዎች እና ማንቂያ ደወሎች"</string>
@@ -5268,8 +5335,7 @@
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"ማዳመጥ ለመጀመር ከታች ያለውን QR ኮድ መሃል ያድርጉት"</string>
     <string name="audio_streams_add_source_bad_code_state_summary" msgid="6527086906921868757">"የይለፍ ቃልን ይፈትሹ እና እንደገና ይሞክሩ"</string>
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"መገናኘት አልተቻለም። እንደገና ይሞክሩ።"</string>
-    <string name="audio_streams_add_source_wait_for_response_summary" msgid="3763240901110974606">"በማገናኘት ላይ…"</string>
-    <string name="audio_streams_wait_for_sync_state_summary" msgid="11905744690831864">"በመቃኘት ላይ…"</string>
+    <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"በማገናኘት ላይ…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"የኦዲዮ ዥረት አይገኝም"</string>
     <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"ይህ የኦዲዮ ዥረት አሁን ላይ ምንም ነገር በማጫወት ላይ አይደለም"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"ዝጋ"</string>
@@ -5279,7 +5345,7 @@
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"የኦዲዮ ዥረቱ በ<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ላይ ይጫወታል። የድምፅ መጠኑን ለመቆጣጠር ይህን መሣሪያ ይጠቀሙ።"</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"የኦዲዮ ዥረትን ማዳመጥ አልተቻለም"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"የተገናኙ ተኳሃኝ የራስ ላይ ማዳመጫዎች"</string>
-    <string name="audio_streams_activity_title" msgid="9011162151277443663">"ስርጭቶች"</string>
+    <string name="audio_streams_activity_title" msgid="6766869545769831935">"ኦዲዮ ዥረቶች"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"የይለፍ ቃል የለም"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"የበለጠ ለመረዳት"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"በ<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ላይ ይህን የኦዲዮ ዥረትን መጫወት አልተቻለም።"</string>
