--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -556,6 +556,28 @@
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"Tryk for at konfigurere"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"Fingeroplåsning til privat område"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"Ansigtsoplåsning til privat område"</string>
+    <!-- no translation found for private_space_biometric_unlock_title (1978145237698659673) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_title (5187730641333680942) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_message (9092068873421435300) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_footer_message (7125255484447984854) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_finish_message (4754797926493316965) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_title (3717541082520006032) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_message (250239418499081821) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_looking (5694757845303924042) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_less_secure (8460719783943533172) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_require_attention_details (2799569069549999689) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_footer (7722256209563543711) -->
+    <skip />
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"Muligheder for oplåsning"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"Den samme som enhedens skærmlås"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"Vil du vælge en ny lås til det private område?"</string>
@@ -1470,6 +1492,8 @@
     <string name="error_duplicate_apn_entry" msgid="7792928408935276618">"Dupliker APN-indgang."</string>
     <string name="error_name_empty" msgid="1258275899283079142">"Feltet Navn skal udfyldes."</string>
     <string name="error_apn_empty" msgid="7657491065443746915">"Du skal angive et APN."</string>
+    <!-- no translation found for error_apn_type_empty (8697781608034468813) -->
+    <skip />
     <string name="error_mcc_not3" msgid="883659545640179094">"MCC-feltet skal indeholde 3 tal."</string>
     <string name="error_mnc_not23" msgid="7642478711158474918">"MNC-feltet skal indeholde 2 eller 3 tal."</string>
     <string name="error_adding_apn_type" msgid="1324263534991467943">"Mobilselskabet tillader ikke, at du tilføjer adgangspunkter af typen %s."</string>
@@ -3324,7 +3348,24 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"Tillad afbrydelser, der laver lyd"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"Bloker visuelle forstyrrelser"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"Tillad visuelle signaler"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"Visningsindstillinger for skjulte notifikationer"</string>
+    <string name="mode_interruption_filter_title" msgid="6657431939996264417">"Notifikationer, du kan modtage"</string>
+    <string name="mode_device_effects_title" msgid="5857008332618433744">"Yderligere handlinger"</string>
+    <string name="mode_display_settings_title" msgid="8132825978346535472">"Indstillinger for visning"</string>
+    <string name="mode_display_options_section" msgid="5151597748243866532">"Visningsmuligheder"</string>
+    <string name="mode_grayscale_title" msgid="6027553257331235461">"Gråtoner"</string>
+    <string name="mode_grayscale_title_secondary_list" msgid="2662593380253642581">"gråtoner"</string>
+    <string name="mode_grayscale_summary" msgid="6682099523626777038">"Indstil skærmen til sort/hvid"</string>
+    <string name="mode_aod_title" msgid="5903435070341237325">"Lad skærmen være slukket"</string>
+    <string name="mode_aod_title_secondary_list" msgid="8268180392811027557">"lad skærmen være slukket"</string>
+    <string name="mode_aod_summary" msgid="7516159044827627065">"Deaktiver altid aktiv skærm"</string>
+    <string name="mode_wallpaper_title" msgid="5549693923133928374">"Nedton baggrunden"</string>
+    <string name="mode_wallpaper_title_secondary_list" msgid="5034602021811580157">"nedton baggrunden"</string>
+    <string name="mode_wallpaper_summary" msgid="665480011615603784">"Skift baggrundens lysstyrke"</string>
+    <string name="mode_dark_theme_title" msgid="8099007897943513209">"Aktivér mørkt tema"</string>
+    <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"aktivér mørkt tema"</string>
+    <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Indstil OS og apps til at foretrække lys tekst på en mørk baggrund, hvilket kan være mere behageligt for øjnene og medføre betydelig batteribesparelse på nogle enheder"</string>
+    <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Ingen ændringer af visningen}=1{{effect_1}}=2{{effect_1} og {effect_2}}=3{{effect_1}, {effect_2} og {effect_3}}one{{effect_1}, {effect_2} og # anden}other{{effect_1}, {effect_2} og # andre}}"</string>
+    <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Visningsmuligheder for filtrerede notifikationer"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Når Forstyr ikke er aktiveret"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Ingen lyd fra notifikationer"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Notifikationer vises på skærmen"</string>
@@ -3335,9 +3376,9 @@
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"Tilpasset"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"Aktivér tilpasset indstilling"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Fjern tilpasset indstilling"</string>
-    <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"Ingen lyd fra notifikationer"</string>
-    <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"Delvist skjult"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Ingen lyd eller visuelle signaler fra notifikationer"</string>
+    <string name="zen_mode_restrict_notifications_summary_muted" msgid="2826459087306271381">"Notifikationer vises"</string>
+    <string name="zen_mode_restrict_notifications_summary_custom" msgid="6455811408721183198">"Notifikationer er delvist skjulte"</string>
+    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="2157279412167366119">"Notifikationer er skjulte"</string>
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"Tilpassede begrænsninger"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"Når skærmen er tændt"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"Når skærmen er slukket"</string>
@@ -4505,7 +4546,8 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"Afspil <xliff:g id="LABEL">%s</xliff:g> på"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"Lyden afspilles på"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"Denne enhed"</string>
-    <string name="media_output_audio_sharing" msgid="6531742594884809737">"Lyddeling"</string>
+    <!-- no translation found for media_output_audio_sharing (8169294522817470115) -->
+    <skip />
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"Enheden kan ikke bruges under opkald"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"Besvar opkald på"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"Dette APN kan ikke ændres."</string>
@@ -4701,6 +4743,10 @@
     <string name="sim_onboarding_next" msgid="6415025179929475355">"Næste"</string>
     <string name="sim_onboarding_progressbar_turning_sim_on" msgid="1163318788393361574">"Aktiverer <xliff:g id="CARRIER_NAME">%1$s</xliff:g>…"</string>
     <string name="mobile_network_spn_title" msgid="3053793174495329077">"Mobilnetværk"</string>
+    <!-- no translation found for imei_primary (5312232202518974440) -->
+    <skip />
+    <!-- no translation found for meid_primary (3256732684155678106) -->
+    <skip />
     <string name="mobile_network_phone_number_title" msgid="2090794402855021784">"Telefonnummer"</string>
     <string name="mobile_network_sim_label_color_title" msgid="2401352348041132876">"SIM-etiket og -farve"</string>
     <string name="sim_setup_channel_id" msgid="8797972565087458515">"Netværksaktivering"</string>
@@ -4804,14 +4850,15 @@
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"Grafikprocessor"</string>
     <string name="enable_16k_pages" msgid="8001470927566110689">"Genstart med sidestørrelsen 16 kB"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"Start enheden med en kerne, der understøtter en sidestørrelse på 16 kB"</string>
-    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"Skift fra tilstanden med 4 kB til tilstanden med 16 kB"</string>
-    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"Du er i den sideagnostiske tilstand, der kører en kerne på 4 kB, og du skifter til tilstanden med 16 kB. Softwareintegriteten kan ikke garanteres i denne tilstand, og eventuelle data, der gemmes på telefonen, mens bootloaderen er ulåst, kan være sårbare. Denne handling genstarter enheden. Nogle funktioner deaktiveres i disse tilstande, så nogle apps fungerer muligvis ikke. Hvis du vil skifte tilbage til produktionstilstand på enheden, skal du skifte tilbage til tilstanden med 4 kB og låse bootloaderen, hvilket vil gendanne enhedens fabriksindstillinger. Når enheden er startet i Android, skal du deaktivere OEM-oplåsning i Indstillinger for udviklere."</string>
+    <string name="confirm_enable_16k_pages_title" msgid="611010487387251491">"Skift fra tilstanden med 4 KB til tilstanden med 16 KB"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="6129208614283750541">"Du er i den sideagnostiske tilstand, der kører en kerne på 4 KB, og du skifter til tilstanden med 16 KB. Softwareintegriteten kan ikke garanteres i denne tilstand, og eventuelle data, der gemmes på telefonen, mens bootloaderen er ulåst, kan være sårbare. Denne handling genstarter enheden. Nogle funktioner deaktiveres i disse tilstande, så nogle apps fungerer muligvis ikke. Hvis du vil skifte tilbage til produktionstilstand på enheden, skal du skifte tilbage til tilstanden med 4 KB og låse bootloaderen, hvilket vil gendanne enhedens fabriksindstillinger. Når enheden er startet i Android, skal du deaktivere OEM-oplåsning via Indstillinger for udviklere."</string>
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"Skift fra tilstanden med 16 kB til tilstanden med 4 kB"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"Du er i den sideagnostiske tilstand, der kører en kerne på 16 kB, og du skifter til tilstanden med 4 kB. Softwareintegriteten kan ikke garanteres i denne tilstand, og eventuelle data, der gemmes på telefonen, mens bootloaderen er ulåst, kan være sårbare. Denne handling genstarter enheden. Nogle funktioner deaktiveres i disse tilstande, så nogle apps fungerer muligvis ikke. Hvis du vil skifte tilbage til produktionstilstand på enheden, skal du låse bootloaderen, hvilket vil gendanne enhedens fabriksindstillinger. Når enheden er startet i Android, skal du deaktivere OEM-oplåsning i Indstillinger for udviklere."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"Sidestørrelsen kunne ikke opdateres til 16 kB, der er kompatibel med kernen."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"Anvender ændringer"</string>
     <string name="confirm_format_ext4_title" msgid="6696191800594435577">"Vil du omformatere enheden til ext4? (påkrævet for at bruge tilstanden med 16 kB)"</string>
     <string name="confirm_format_ext4_text" msgid="7940372488624630214">"Denne enheds datapartition skal konverteres til ext4, før du kan bruge udviklerindstillingen med 16 kB. Softwareintegriteten kan ikke garanteres i denne tilstand, og eventuelle data, der gemmes på telefonen, mens bootloaderen er ulåst, kan være sårbare. Aktivering af indstillingen med 16 kB kræver én yderligere genstart efter dette. Når du er i denne tilstand, kan du skifte mellem tilstanden med 4 kB og tilstanden med 16 kB ved blot at genstarte en enkelt gang. Nogle funktioner deaktiveres i disse tilstande, så nogle apps fungerer muligvis ikke. Hvis du vil skifte tilbage til produktionstilstand på enheden, skal du skifte tilbage til tilstanden med 4 kB og derefter låse bootloaderen, hvilket vil gendanne enhedens fabriksindstillinger. Når enheden er startet i Android, skal du deaktivere OEM-oplåsning i Indstillinger for udviklere. Enheden ryddes, og filsystemet ændres til ext4 efter bekræftelse. Når dette er gjort, skal du vende tilbage for at aktivere 16 kB igen."</string>
+    <string name="confirm_ext4_button_text" msgid="6045501984773738407">"Ryd alle data"</string>
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"Datapartitionen kunne ikke omformateres og ryddes til ext4."</string>
     <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"Oplåsning af bootloader er påkrævet ved brug af tilstanden med 16 kB"</string>
     <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"Bootloader skal være låst op på denne enhed, før du kan bruge udviklerindstillingen med 16 kB. Softwareintegriteten kan ikke garanteres i denne tilstand, og eventuelle data, der gemmes på telefonen, mens bootloaderen er ulåst, kan være sårbare. Alle brugerdata og -indstillinger ryddes, når du aktiverer tilstanden med 16 kB. Når bootloaderen er låst op, forudsætter brug af indstillingen med 16 kB to genstarter. Når du er i denne tilstand, kan du skifte mellem tilstanden med 4 kB og tilstanden med 16 kB ved blot at genstarte en enkelt gang. Nogle funktioner deaktiveres i disse tilstande, så nogle apps fungerer muligvis ikke. Hvis du vil skifte tilbage til produktionstilstand på enheden, skal du skifte tilbage til tilstanden med 4 kB og derefter låse OEM/bootloaderen, hvilket gendanner enheden fabriksindstillinger. Lås bootloaderen op, og prøv igen. Du kan se, hvordan du gør dette, på &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt;"</string>
@@ -5264,8 +5311,7 @@
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"Centrer QR-koden nedenfor for at gå i gang med at lytte"</string>
     <string name="audio_streams_add_source_bad_code_state_summary" msgid="6527086906921868757">"Tjek adgangskoden, og prøv igen"</string>
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"Der kan ikke oprettes forbindelse. Prøv igen."</string>
-    <string name="audio_streams_add_source_wait_for_response_summary" msgid="3763240901110974606">"Opretter forbindelse…"</string>
-    <string name="audio_streams_wait_for_sync_state_summary" msgid="11905744690831864">"Søger…"</string>
+    <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"Forbinder…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"Lydstreamen er ikke tilgængelig"</string>
     <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"Denne lydstream afspiller ikke noget lige nu"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"Luk"</string>
@@ -5275,7 +5321,7 @@
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"Lydstreamen afspilles på <xliff:g id="DEVICE_NAME">%1$s</xliff:g>. Brug denne enhed til at administrere lydstyrken."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"Kan ikke lytte til lydstreamen"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"tilknyttede kompatible høretelefoner"</string>
-    <string name="audio_streams_activity_title" msgid="9011162151277443663">"Fællesbeskeder"</string>
+    <string name="audio_streams_activity_title" msgid="6766869545769831935">"Lydstreams"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"Ingen adgangskode"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Få flere oplysninger"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Kan ikke afspille denne lydstream på <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
