--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -556,6 +556,28 @@
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"ແຕະເພື່ອຕັ້ງຄ່າ"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"ການປົດລັອກດ້ວຍລາຍນິ້ວມືສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"ການປົດລັອກດ້ວຍໜ້າສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
+    <!-- no translation found for private_space_biometric_unlock_title (1978145237698659673) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_title (5187730641333680942) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_message (9092068873421435300) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_introduction_footer_message (7125255484447984854) -->
+    <skip />
+    <!-- no translation found for private_space_fingerprint_enroll_finish_message (4754797926493316965) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_title (3717541082520006032) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_message (250239418499081821) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_looking (5694757845303924042) -->
+    <skip />
+    <!-- no translation found for private_space_face_enroll_introduction_info_less_secure (8460719783943533172) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_require_attention_details (2799569069549999689) -->
+    <skip />
+    <!-- no translation found for private_space_face_settings_footer (7722256209563543711) -->
+    <skip />
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"ວິທີປົດລັອກ"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"ຄືກັນກັບການລັອກໜ້າຈໍອຸປະກອນ"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"ເລືອກການລັອກໃໝ່ສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນບໍ?"</string>
@@ -1470,6 +1492,8 @@
     <string name="error_duplicate_apn_entry" msgid="7792928408935276618">"ລາຍການ APN ຊ້ຳກັນ."</string>
     <string name="error_name_empty" msgid="1258275899283079142">"ແຖບຂໍ້ມູນຊື່ບໍ່ສາມາດປ່ອຍຫວ່າງໄດ້."</string>
     <string name="error_apn_empty" msgid="7657491065443746915">"APN ບໍ່ສາມາດປ່ອຍໃຫ້ຫວ່າງໄດ້."</string>
+    <!-- no translation found for error_apn_type_empty (8697781608034468813) -->
+    <skip />
     <string name="error_mcc_not3" msgid="883659545640179094">"ຊ່ອງຂໍ້ມູນ MMC ຕ້ອງມີ 3 ໂຕເລກ."</string>
     <string name="error_mnc_not23" msgid="7642478711158474918">"ແຖບຂໍ້ມູນ MNC ຕ້ອງມີໂຕເລກຢ່າງໜ້ອຍ 2 ຫຼື 3 ໂຕ."</string>
     <string name="error_adding_apn_type" msgid="1324263534991467943">"ຜູ້ໃຫ້ບໍລິການບໍ່ອະນຸຍາດໃຫ້ເພີ່ມ APN ປະເພດ %s."</string>
@@ -3324,7 +3348,24 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"ອະນຸຍາດການລົບກວນທີ່ມີສຽງ"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"ບລັອກການລົບກວນທາງພາບ"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"ອະນຸຍາດສັນຍານພາບ"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"ສະແດງຕົວເລືອກການແຈ້ງເຕືອນທີ່ຖືກເຊື່ອງໄວ້"</string>
+    <string name="mode_interruption_filter_title" msgid="6657431939996264417">"ການແຈ້ງເຕືອນທີ່ທ່ານອາດໄດ້ຮັບ"</string>
+    <string name="mode_device_effects_title" msgid="5857008332618433744">"ຄຳສັ່ງເພີ່ມເຕີມ"</string>
+    <string name="mode_display_settings_title" msgid="8132825978346535472">"ການຕັ້ງຄ່າການສະແດງຜົນ"</string>
+    <string name="mode_display_options_section" msgid="5151597748243866532">"ຕົວເລືອກການສະແດງຜົນ"</string>
+    <string name="mode_grayscale_title" msgid="6027553257331235461">"ຂາວດຳ"</string>
+    <string name="mode_grayscale_title_secondary_list" msgid="2662593380253642581">"ຂາວດຳ"</string>
+    <string name="mode_grayscale_summary" msgid="6682099523626777038">"ປ່ຽນໜ້າຈໍເປັນສີຂາວດຳ"</string>
+    <string name="mode_aod_title" msgid="5903435070341237325">"ເຮັດໃຫ້ໜ້າຈໍມືດຢູ່ຕະຫຼອດ"</string>
+    <string name="mode_aod_title_secondary_list" msgid="8268180392811027557">"ເຮັດໃຫ້ໜ້າຈໍມືດຢູ່ຕະຫຼອດ"</string>
+    <string name="mode_aod_summary" msgid="7516159044827627065">"ປິດການນຳໃຊ້ໜ້າຈໍແບບເປີດຕະຫຼອດ"</string>
+    <string name="mode_wallpaper_title" msgid="5549693923133928374">"ຜ່ອນແສງຮູບພື້ນຫຼັງລົງ"</string>
+    <string name="mode_wallpaper_title_secondary_list" msgid="5034602021811580157">"ຜ່ອນແສງຮູບພື້ນຫຼັງລົງ"</string>
+    <string name="mode_wallpaper_summary" msgid="665480011615603784">"ປັບຄວາມສະຫວ່າງຂອງຮູບພື້ນຫຼັງ"</string>
+    <string name="mode_dark_theme_title" msgid="8099007897943513209">"ເປີດການນຳໃຊ້ຮູບແບບສີສັນມືດ"</string>
+    <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"ເປີດການນຳໃຊ້ຮູບແບບສີສັນມືດ"</string>
+    <string name="mode_dark_theme_summary" msgid="8428887193785431898">"ສະຫຼັບລະບົບປະຕິບັດການ ແລະ ແອັບເພື່ອໃຊ້ຂໍ້ຄວາມສີອ່ອນເທິງພື້ນຫຼັງສີເຂັ້ມ, ເຊິ່ງອາດສະບາຍຕາຫຼາຍຂຶ້ນ ແລະ ຊ່ວຍປະຢັດແບັດເຕີຣີໄດ້ຫຼາຍໃນອຸປະກອນບາງປະເພດ"</string>
+    <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{ບໍ່ມີການປ່ຽນແປງການສະແດງຜົນ}=1{{effect_1}}=2{{effect_1} ແລະ {effect_2}}=3{{effect_1}, {effect_2} ແລະ {effect_3}}other{{effect_1}, {effect_2} ແລະ ອີກ # ລາຍການ}}"</string>
+    <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ຕົວເລືອກການສະແດງຜົນສຳລັບການແຈ້ງເຕືອນທີ່ຖືກກັ່ນຕອງ"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"ເມື່ອເປີດໃຊ້ໂໝດຫ້າມລົບກວນ"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"ບໍ່ມີສຽງຈາກການແຈ້ງເຕືອນ"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"ທ່ານຈະເຫັນການແຈ້ງເຕືອນຢູ່ໜ້າຈໍຂອງທ່ານ"</string>
@@ -3335,9 +3376,9 @@
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"ກຳນົດເອງ"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"ເປີດການຕັ້ງຄ່າແບບກຳນົດເອງ"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"ລຶບການຕັ້ງຄ່າແບບກຳນົດເອງອອກ"</string>
-    <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"ບໍ່ມີສຽງຈາກການແຈ້ງເຕືອນ"</string>
-    <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"ເຊື່ອງໄວ້ບາງສ່ວນ"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"ບໍ່ມີພາບ ຫຼື ສຽງຈາກການແຈ້ງເຕືອນ"</string>
+    <string name="zen_mode_restrict_notifications_summary_muted" msgid="2826459087306271381">"ສະແດງການແຈ້ງເຕືອນ"</string>
+    <string name="zen_mode_restrict_notifications_summary_custom" msgid="6455811408721183198">"ເຊື່ອງການແຈ້ງເຕືອນໄວ້ບາງສ່ວນ"</string>
+    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="2157279412167366119">"ເຊື່ອງການແຈ້ງເຕືອນໄວ້"</string>
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"ການຈຳກັດແບບກຳນົດເອງ"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"ເມື່ອເປີດໜ້າຈໍ"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"ເມື່ອໜ້າຈໍປິດ"</string>
@@ -4505,7 +4546,8 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"ຫຼິ້ນຢູ່ <xliff:g id="LABEL">%s</xliff:g>"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"ສຽງຈະຫຼິ້ນຢູ່"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"ອຸປະກອນນີ້"</string>
-    <string name="media_output_audio_sharing" msgid="6531742594884809737">"ການແບ່ງປັນສຽງ"</string>
+    <!-- no translation found for media_output_audio_sharing (8169294522817470115) -->
+    <skip />
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"ບໍ່ສາມາດໃຊ້ໄດ້ລະຫວ່າງການໂທ"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"ຮັບສາຍຢູ່"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"ບໍ່ສາມາດປ່ຽນ APN ນີ້ໄດ້."</string>
@@ -4701,6 +4743,10 @@
     <string name="sim_onboarding_next" msgid="6415025179929475355">"ຕໍ່ໄປ"</string>
     <string name="sim_onboarding_progressbar_turning_sim_on" msgid="1163318788393361574">"ກຳລັງເປີດ <xliff:g id="CARRIER_NAME">%1$s</xliff:g>…"</string>
     <string name="mobile_network_spn_title" msgid="3053793174495329077">"ເຄືອຂ່າຍມືຖື"</string>
+    <!-- no translation found for imei_primary (5312232202518974440) -->
+    <skip />
+    <!-- no translation found for meid_primary (3256732684155678106) -->
+    <skip />
     <string name="mobile_network_phone_number_title" msgid="2090794402855021784">"ເບີໂທລະສັບ"</string>
     <string name="mobile_network_sim_label_color_title" msgid="2401352348041132876">"ປ້າຍກຳກັບ ແລະ ສີຊິມ"</string>
     <string name="sim_setup_channel_id" msgid="8797972565087458515">"ການເປີດນຳໃຊ້ເຄືອຂ່າຍ"</string>
@@ -4804,14 +4850,15 @@
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
     <string name="enable_16k_pages" msgid="8001470927566110689">"ເປີດໂດຍໃຊ້ໜ້າຂະໜາດ 16KB"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"ເປີດອຸປະກອນໂດຍໃຊ້ເຄີເນວທີ່ຮອງຮັບໜ້າຂະໜາດ 16KB"</string>
-    <string name="confirm_enable_16k_pages_title" msgid="1286925577014793351">"ປ່ຽນຈາກໂໝດ 4KB ເປັນໂໝດ 16KB"</string>
-    <string name="confirm_enable_16k_pages_text" msgid="570198382662424714">"ທ່ານຢູ່ໃນໂໝດບໍ່ເນັ້ນການໃຊ້ໜ້າໂດຍໃຊ້ເຄີເນວຂະໜາດ 4KB ແລະ ທ່ານກຳລັງຈະປ່ຽນໄປໃຊ້ໂໝດ 16KB. ບໍ່ຮັບປະກັນຄວາມສົມບູນຂອງຊອບແວໃນໂໝດນີ້ ແລະ ຂໍ້ມູນໃດກໍຕາມທີ່ຈັດເກັບໃນໂທລະສັບໃນລະຫວ່າງທີ່ bootloader ປົດລັອກຢູ່ອາດມີຄວາມສ່ຽງ. ການດຳເນີນການນີ້ຈະເປັນການປິດເປີດອຸປະກອນໃໝ່. ຄຸນສົມບັດບາງຢ່າງອາດຖືກປິດການນຳໃຊ້ໃນໂໝດເຫຼົ່ານີ້, ດັ່ງນັ້ນບາງແອັບພລິເຄຊັນຈຶ່ງອາດບໍ່ເຮັດວຽກ. ເພື່ອໃຫ້ອຸປະກອນກັບຄືນເປັນໂໝດໂປຣດັກຊັນ, ທ່ານຈະຕ້ອງປ່ຽນກັບໄປໃຊ້ໂໝດ 4KB ແລະ ລັອກ bootloader, ເຊິ່ງຈະຣີເຊັດອຸປະກອນເປັນຄ່າຈາກໂຮງງານ. ຫຼັງຈາກທີ່ອຸປະກອນເປີດເຂົ້າເປັນ Android ໄດ້ສຳເລັດ, ໃຫ້ປິດການນຳໃຊ້ການປົດລັອກ OEM ໃນຕົວເລືອກນັກພັດທະນາ."</string>
+    <string name="confirm_enable_16k_pages_title" msgid="611010487387251491">"ປ່ຽນຈາກໂໝດ 4KB ເປັນໂໝດ 16KB"</string>
+    <string name="confirm_enable_16k_pages_text" msgid="6129208614283750541">"ທ່ານຢູ່ໃນໂໝດບໍ່ເນັ້ນການໃຊ້ໜ້າໂດຍໃຊ້ເຄີເນວຂະໜາດ 4KB ແລະ ທ່ານກຳລັງຈະປ່ຽນໄປໃຊ້ໂໝດ 16KB. ບໍ່ຮັບປະກັນຄວາມສົມບູນຂອງຊອບແວໃນໂໝດນີ້ ແລະ ຂໍ້ມູນໃດກໍຕາມທີ່ຈັດເກັບໃນໂທລະສັບໃນລະຫວ່າງທີ່ bootloader ປົດລັອກຢູ່ອາດມີຄວາມສ່ຽງ. ການດຳເນີນການນີ້ຈະເປັນການປິດເປີດອຸປະກອນໃໝ່. ຄຸນສົມບັດບາງຢ່າງອາດຖືກປິດການນຳໃຊ້ໃນໂໝດເຫຼົ່ານີ້, ດັ່ງນັ້ນບາງແອັບພລິເຄຊັນຈຶ່ງອາດບໍ່ເຮັດວຽກ. ເພື່ອໃຫ້ອຸປະກອນກັບຄືນເປັນໂໝດໂປຣດັກຊັນ, ທ່ານຈະຕ້ອງປ່ຽນກັບໄປໃຊ້ໂໝດ 4KB ແລະ ລັອກ bootloader, ເຊິ່ງຈະຣີເຊັດອຸປະກອນເປັນຄ່າຈາກໂຮງງານ. ຫຼັງຈາກທີ່ອຸປະກອນເປີດເຂົ້າເປັນ Android ໄດ້ສຳເລັດ, ໃຫ້ປິດການນຳໃຊ້ການປົດລັອກ OEM ໃນຕົວເລືອກນັກພັດທະນາ."</string>
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"ປ່ຽນຈາກໂໝດ 16KB ເປັນໂໝດ 4KB"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"ທ່ານຢູ່ໃນໂໝດບໍ່ເນັ້ນການໃຊ້ໜ້າໂດຍໃຊ້ເຄີເນວຂະໜາດ 16KB ແລະ ທ່ານກຳລັງຈະປ່ຽນໄປໃຊ້ໂໝດ 4KB. ບໍ່ຮັບປະກັນຄວາມສົມບູນຂອງຊອບແວໃນໂໝດນີ້ ແລະ ຂໍ້ມູນໃດກໍຕາມທີ່ຈັດເກັບໃນໂທລະສັບໃນລະຫວ່າງທີ່ bootloader ປົດລັອກຢູ່ອາດມີຄວາມສ່ຽງ. ການດຳເນີນການນີ້ຈະເປັນການປິດເປີດອຸປະກອນໃໝ່. ຄຸນສົມບັດບາງຢ່າງອາດຖືກປິດການນຳໃຊ້ໃນໂໝດເຫຼົ່ານີ້, ດັ່ງນັ້ນບາງແອັບພລິເຄຊັນຈຶ່ງອາດບໍ່ເຮັດວຽກ. ເພື່ອໃຫ້ອຸປະກອນກັບຄືນເປັນໂໝດໂປຣດັກຊັນ, ທ່ານຈະຕ້ອງລັອກ bootloader, ເຊິ່ງຈະຣີເຊັດອຸປະກອນເປັນຄ່າຈາກໂຮງງານ. ຫຼັງຈາກທີ່ອຸປະກອນເປີດເຂົ້າເປັນ Android ໄດ້ສຳເລັດ, ໃຫ້ປິດການນຳໃຊ້ການປົດລັອກ OEM ໃນຕົວເລືອກນັກພັດທະນາ."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"ອັບເດດເປັນເຄີເນວທີ່ໃຊ້ໄດ້ກັບໜ້າຂະໜາດ 16KB ບໍ່ສຳເລັດ."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"ກຳລັງນຳໃຊ້ການປ່ຽນແປງ"</string>
     <string name="confirm_format_ext4_title" msgid="6696191800594435577">"ຟໍແມັດອຸປະກອນໃໝ່ເປັນ ext4 ບໍ? (ຈຳເປັນສຳລັບໂໝດ 16KB)"</string>
     <string name="confirm_format_ext4_text" msgid="7940372488624630214">"ພາທິຊັນຂໍ້ມູນຂອງອຸປະກອນນີ້ຈະຕ້ອງປ່ຽນແປງເປັນ ext4 ກ່ອນທີ່ຈະໃຊ້ຕົວເລືອກນັກພັດທະນາແບບ 16KB. ບໍ່ຮັບປະກັນຄວາມສົມບູນຂອງຊອບແວໃນໂໝດນີ້ ແລະ ຂໍ້ມູນໃດກໍຕາມທີ່ຈັດເກັບໃນໂທລະສັບໃນລະຫວ່າງທີ່ bootloader ປົດລັອກຢູ່ອາດມີຄວາມສ່ຽງ. ການເປີດນຳໃຊ້ຕົວເລືອກ 16KB ຈະຕ້ອງມີການປິດເປີດໃໝ່ອີກເທື່ອໜຶ່ງຫຼັງຈາກນີ້. ເມື່ອທ່ານຢູ່ໃນໂໝດນີ້ແລ້ວ, ທ່ານສາມາດປ່ຽນໄປມາລະຫວ່າງໂໝດ 4KB ແລະ 16KB ໄດ້ໂດຍການປິດເປີດໃໝ່ເທື່ອດຽວ. ຄຸນສົມບັດບາງຢ່າງອາດຖືກປິດການນຳໃຊ້ໃນໂໝດເຫຼົ່ານີ້, ດັ່ງນັ້ນບາງແອັບພລິເຄຊັນຈຶ່ງອາດບໍ່ເຮັດວຽກ. ເພື່ອໃຫ້ອຸປະກອນກັບຄືນເປັນໂໝດໂປຣດັກຊັນ, ທ່ານຈະຕ້ອງປ່ຽນກັບໄປໃຊ້ໂໝດ 4KB ຈາກນັ້ນລັອກ bootloader, ເຊິ່ງຈະຣີເຊັດອຸປະກອນເປັນຄ່າຈາກໂຮງງານ. ຫຼັງຈາກທີ່ອຸປະກອນເປີດເຂົ້າເປັນ Android ໄດ້ສຳເລັດ, ໃຫ້ປິດການນຳໃຊ້ການປົດລັອກ OEM ໃນຕົວເລືອກນັກພັດທະນາ. ອຸປະກອນຈະຖືກລ້າງຂໍ້ມູນ ແລະ ລະບົບໄຟລ໌ຈະປ່ຽນເປັນ ext4 ຫຼັງຈາກການຢືນຢັນ. ຫຼັງຈາກການດຳເນີນການນີ້ສຳເລັດ, ກະລຸນາກັບຄືນມາເປີດການນຳໃຊ້ໂໝດ 16KB ອີກເທື່ອໜຶ່ງ."</string>
+    <string name="confirm_ext4_button_text" msgid="6045501984773738407">"ລຶບຂໍ້ມູນທັງໝົດ"</string>
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"ຟໍແມັດໃໝ່ ແລະ ລ້າງພາທິຊັນຂໍ້ມູນເປັນ ext4 ບໍ່ສຳເລັດ."</string>
     <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"ຕ້ອງປົດລັອກ Bootloader ສຳລັບໂໝດ 16KB"</string>
     <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"ອຸປະກອນນີ້ຕ້ອງມີການປົດລັອກ bootloader ກ່ອນທີ່ຈະໃຊ້ຕົວເລືອກນັກພັດທະນາແບບ 16KB. ບໍ່ຮັບປະກັນຄວາມສົມບູນຂອງຊອບແວໃນໂໝດນີ້ ແລະ ຂໍ້ມູນໃດກໍຕາມທີ່ຈັດເກັບໃນໂທລະສັບໃນລະຫວ່າງທີ່ bootloader ປົດລັອກຢູ່ອາດມີຄວາມສ່ຽງ. ຂໍ້ມູນຜູ້ໃຊ້ ແລະ ການຕັ້ງຄ່າທັງໝົດຈະຖືກລ້າງເມື່ອເປີດນຳໃຊ້ໂໝດ 16KB. ເມື່ອປົດລັອກ bootloader ແລ້ວ, ການເປີດນຳໃຊ້ຕົວເລືອກ 16KB ຈະຕ້ອງມີການປິດເປີດໃໝ່ສອງເທື່ອ. ເມື່ອທ່ານຢູ່ໃນໂໝດນີ້ແລ້ວ, ທ່ານສາມາດປ່ຽນໄປມາລະຫວ່າງໂໝດ 4KB ແລະ 16KB ໄດ້ໂດຍການປິດເປີດໃໝ່ເທື່ອດຽວ. ຄຸນສົມບັດບາງຢ່າງອາດຖືກປິດການນຳໃຊ້ໃນໂໝດເຫຼົ່ານີ້, ດັ່ງນັ້ນບາງແອັບພລິເຄຊັນຈຶ່ງອາດບໍ່ເຮັດວຽກ. ເພື່ອໃຫ້ອຸປະກອນກັບຄືນເປັນໂໝດໂປຣດັກຊັນ, ທ່ານຈະຕ້ອງປ່ຽນກັບໄປໃຊ້ໂໝດ 4KB ຈາກນັ້ນລັອກ OEM/bootloader (ເຊິ່ງຈະຣີເຊັດອຸປະກອນເປັນຄ່າຈາກໂຮງງານ). ກະລຸນາປົດລັອກ bootloader ແລ້ວລອງໃໝ່. ທ່ານສາມາດເບິ່ງຄຳແນະນຳສຳລັບວິທີການນີ້ໄດ້ຢູ່ &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt;"</string>
@@ -5264,8 +5311,7 @@
     <string name="audio_streams_qr_code_scanner" msgid="525396804963685478">"ເພື່ອເລີ່ມການຟັງ, ໃຫ້ວາງລະຫັດ QR ທາງລຸ່ມນີ້ໄວ້ທາງກາງ"</string>
     <string name="audio_streams_add_source_bad_code_state_summary" msgid="6527086906921868757">"ກະລຸນາກວດສອບລະຫັດຜ່ານ ແລ້ວລອງໃໝ່"</string>
     <string name="audio_streams_add_source_failed_state_summary" msgid="3937546443978562322">"ບໍ່ສາມາດເຊື່ອມຕໍ່ໄດ້. ລອງໃໝ່."</string>
-    <string name="audio_streams_add_source_wait_for_response_summary" msgid="3763240901110974606">"ກຳລັງເຊື່ອມຕໍ່…"</string>
-    <string name="audio_streams_wait_for_sync_state_summary" msgid="11905744690831864">"ກຳລັງສະແກນ…"</string>
+    <string name="audio_streams_connecting_summary" msgid="7237827765572331702">"ກຳລັງເຊື່ອມຕໍ່…"</string>
     <string name="audio_streams_dialog_stream_is_not_available" msgid="4032878851270690546">"ການສະຕຣີມສຽງບໍ່ພ້ອມໃຫ້ບໍລິການ"</string>
     <string name="audio_streams_is_not_playing" msgid="8480293894696007941">"ການສະຕຣີມສຽງບໍ່ໄດ້ຫຼິ້ນສຽງໃດໆໃນຕອນນີ້"</string>
     <string name="audio_streams_dialog_close" msgid="8177201719298408431">"ປິດ"</string>
@@ -5275,7 +5321,7 @@
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"ການສະຕຣີມສຽງຈະຫຼິ້ນຢູ່ <xliff:g id="DEVICE_NAME">%1$s</xliff:g>. ໃຊ້ອຸປະກອນເຄື່ອງນີ້ເພື່ອຄວບຄຸມລະດັບສຽງ."</string>
     <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"ບໍ່ສາມາດຟັງການສະຕຣີມສຽງໄດ້"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"ເຊື່ອມຕໍ່ຫາຫູຟັງທີ່ເຂົ້າກັນໄດ້ແລ້ວ"</string>
-    <string name="audio_streams_activity_title" msgid="9011162151277443663">"ປະກາດ"</string>
+    <string name="audio_streams_activity_title" msgid="6766869545769831935">"ການສະຕຣີມສຽງ"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"ບໍ່ມີລະຫັດຜ່ານ"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"ສຶກສາເພີ່ມເຕີມ"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"ບໍ່ສາມາດຫຼິ້ນການສະຕຣີມສຽງນີ້ຢູ່ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ໄດ້."</string>
